# gen-audio

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  gen-audio
.cargo/: config.toml
bookworm/: CHANGELOG.md  Cargo.toml  README.md
bookworm/src/: epub.rs  llm.rs  main.rs
gen-audio-worker/: .gitignore  Dockerfile  Dockerfile.cpu  README.md  docker-compose.cpu.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
gen-audio-worker/src/gen_audio_worker/: __init__.py  __main__.py
gen-audio-worker/src/gen_audio_worker/models/: __init__.py  base.py  chatterbox.py  registry.py
gen-audiobook/: CHANGELOG.md  Cargo.toml  README.md
gen-audiobook/proptest-regressions/text/: chunker.txt
gen-audiobook/src/: config.rs  epub.rs  main.rs  setup.rs
gen-audiobook/src/audio/: assembler.rs  metadata.rs  mod.rs
gen-audiobook/src/bootstrap/: download.rs  ffmpeg.rs  mod.rs  platform.rs  python.rs  versions.rs
gen-audiobook/src/coordinator/: config.rs  mod.rs  pool.rs  scheduler.rs  ssh.rs
gen-audiobook/src/session/: mod.rs  persistence.rs  types.rs
gen-audiobook/src/text/: chunker.rs  cleaner.rs  mod.rs  seams.rs
gen-audiobook/src/tts/: chatterbox.rs  mod.rs
gen-audiobook/src/worker/: executor.rs  mod.rs  protocol.rs
llm-client/: CHANGELOG.md  Cargo.toml  README.md
llm-client/src/: config.rs  error.rs  lib.rs  provider.rs
llm-client/src/providers/: anthropic.rs  claude_cli.rs  mock.rs  mod.rs  openai_compatible.rs
xtask/: Cargo.toml
xtask/src/: main.rs  provision.rs
