[workspace]
members = ["gen-audiobook", "bookworm", "llm-client", "xtask"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
regex = "1.10"
once_cell = "1.19"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
