[package]
name = "gen-audiobook"
version = "0.2.0"
edition = "2024"
description = "Convert EPUB files to audio using text-to-speech"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
toml = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util"] }
async-trait = "0.1"
epub = "2.1"
html2text = "0.12"
indicatif = "0.17"
tempfile = "3"
sha2 = "0.10"
dirs = "5.0"
pyo3 = { version = "0.23", features = ["auto-initialize"] }

# Bootstrap dependencies
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }
futures-util = "0.3"
flate2 = "1.0"
tar = "0.4"
zip = "2.2"
xz2 = "0.1"
thiserror = "2.0"
