[package]
name = "gen-audiobook"
version = "0.2.0"
edition = "2024"
description = "Convert EPUB files to audio using distributed TTS workers"

[[bin]]
name = "gen-audio"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
toml = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util"] }
async-trait = "0.1"
epub = "2.1"
html2text = "0.12"
indicatif = "0.17"
tempfile = "3"
sha2 = "0.10"
dirs = "5.0"
thiserror = "2.0"

# Text processing
seams = "0.1"

[dev-dependencies]
proptest = "1.4"
