[package]
name = "llm-client"
version = "0.3.0"
edition = "2024"
description = "Shared LLM client library for cli-programs workspace"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = "2.0"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
which = "7.0"
